--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.7.1",
     "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "query-string": "^9.1.1",
